--- a/resources/assets/pug/inc/_layout.pug
+++ b/resources/assets/pug/inc/_layout.pug
@@ -12,7 +12,7 @@ html(lang="tr")
 
         link(rel='icon' href=path+'icons/favicon.ico' sizes='any')
         link(rel='icon' href=path+'icons/icon.svg' type='image/svg+xml')
-        link(rel='apple-touch-icon' href='icon.png')
+        link(rel='apple-touch-icon' href=path+'icons/icon.png')
         link(rel='manifest' href='manifest.json')
 
         link(rel='stylesheet' href=path+'css/main.css')
